検索条件設定ダイアログをEnterで閉じる

--- a/ShibugakiViewer/Views/Controls/SearchSettingEditor.xaml
+++ b/ShibugakiViewer/Views/Controls/SearchSettingEditor.xaml
@@ -147,8 +147,10 @@
                         Margin="0,0,0,10">
 
                     <Button x:Uid="OkButton"
+                            IsDefault="True"
                             Content="{x:Static properties:Resources.OkButton_Content}"
-                            Command="{Binding OkCommand}" Width="100" Margin="20,0"/>
+                            Command="{Binding OkCommand}" Width="100" Margin="20,0"
+                            Click="OkButton_Click"/>
 
                     <Button x:Uid="CancelButton"
                             Content="{x:Static properties:Resources.CancelButton_Content}"
